--- a/home.css
+++ b/home.css
@@ -19,3 +19,10 @@ body {
     display: flex;
     flex-wrap: wrap;
 }
+
+@media (max-width:450px) {
+    .infocontainer {
+        transform: scale(0.5);
+        position: absolute;
+    }
+}
