--- a/home.css
+++ b/home.css
@@ -1,6 +1,7 @@
 body {
     /* background: linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%); */
     background: linear-gradient(110deg, rgb(180, 204, 248) 60%, rgb(223, 90, 90) 60%);
+    background-repeat: no-repeat;
 }
 
 .devinfo {
