--- a/home.css
+++ b/home.css
@@ -1,3 +1,8 @@
+html {
+  scroll-behavior: smooth;
+}
+
+
 body {
     /* background: linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%); */
     background: linear-gradient(110deg, rgb(180, 204, 248) 60%, rgb(223, 90, 90) 60%);
